[gd_scene load_steps=23 format=2]

[ext_resource path="res://scenes/test_hand_speed.gd" type="Script" id=1]
[ext_resource path="res://ready_scene/models/character/rhea/rhea_spatial.tscn" type="PackedScene" id=2]
[ext_resource path="res://images/gts_background.jpg" type="Texture" id=3]
[ext_resource path="res://scripts/test_hand_speed_mode/Timer.gd" type="Script" id=4]
[ext_resource path="res://fonts/SIMLI.TTF" type="DynamicFontData" id=5]
[ext_resource path="res://scripts/test_hand_speed_mode/pandel.gd" type="Script" id=6]
[ext_resource path="res://fonts/font.tres" type="DynamicFont" id=7]
[ext_resource path="res://scripts/test_hand_speed_mode/re_start.gd" type="Script" id=8]
[ext_resource path="res://scripts/test_hand_speed_mode/to_title.gd" type="Script" id=9]
[ext_resource path="res://scenes/sounds/sound.tscn" type="PackedScene" id=10]
[ext_resource path="res://fonts/xolonium/Xolonium.tres" type="DynamicFont" id=11]
[ext_resource path="res://scripts/test_hand_speed_mode/to_title_Android.gd" type="Script" id=12]
[ext_resource path="res://rain.tscn" type="PackedScene" id=13]
[ext_resource path="res://sounds/bigger.wav" type="AudioStream" id=14]
[ext_resource path="res://sounds/level/Juhani Junkala [Chiptune Adventures] 2. Stage 2.ogg" type="AudioStream" id=15]
[ext_resource path="res://ready_scene/models/city/building.obj" type="ArrayMesh" id=16]
[ext_resource path="res://assets/puhuiti-rgular-40.tres" type="DynamicFont" id=17]

[sub_resource type="DynamicFont" id=1]
size = 36
outline_color = Color( 0.964706, 0.964706, 0.964706, 1 )
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=2]
resource_name = "add"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("add:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 700, 200 ), Vector2( 700, 100 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("add:rect_pivot_offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("add:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=3]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Panel/clicks:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 60 ), Vector2( 100, 60 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Panel/hand_speed:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.8, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 110 ), Vector2( 100, 110 ) ]
}

[sub_resource type="ProceduralSky" id=5]
radiance_size = 1

[sub_resource type="Environment" id=4]
background_mode = 2
background_sky = SubResource( 5 )

[node name="root" type="Spatial"]
script = ExtResource( 1 )
mulit_scale = 1.1

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.48501, -1.26389 )
visible = false
texture = ExtResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 20.0
one_shot = true
autostart = true
script = ExtResource( 4 )

[node name="Label" type="Label" parent="."]
margin_left = 420.0
margin_top = 10.0
margin_right = 480.0
margin_bottom = 40.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "00:00"

[node name="Panel" type="Panel" parent="."]
visible = false
margin_left = 140.0
margin_top = 60.0
margin_right = 810.0
margin_bottom = 480.0
script = ExtResource( 6 )

[node name="Label" type="Label" parent="Panel"]
margin_left = 270.0
margin_top = 10.0
margin_right = 390.0
margin_bottom = 60.0
custom_fonts/font = ExtResource( 7 )
text = "时间到"

[node name="clicks" type="Label" parent="Panel"]
margin_left = 100.0
margin_top = 60.0
margin_right = 300.0
margin_bottom = 110.0
custom_fonts/font = ExtResource( 7 )
text = "点击次数："

[node name="hand_speed" type="Label" parent="Panel"]
margin_left = 100.0
margin_top = 110.0
margin_right = 300.0
margin_bottom = 160.0
custom_fonts/font = ExtResource( 7 )
text = "手速："

[node name="re_start" type="Button" parent="Panel"]
margin_left = 100.0
margin_top = 240.0
margin_right = 440.0
margin_bottom = 350.0
custom_fonts/font = ExtResource( 7 )
text = "再来一次"
script = ExtResource( 8 )

[node name="title2" type="Button" parent="Panel"]
margin_left = 470.0
margin_top = 240.0
margin_right = 650.0
margin_bottom = 340.0
custom_fonts/font = ExtResource( 7 )
text = "返回主页"
script = ExtResource( 9 )

[node name="anim" type="AnimationPlayer" parent="."]
anims/add = SubResource( 2 )
"anims/胜利" = SubResource( 3 )

[node name="sound" parent="." instance=ExtResource( 10 )]

[node name="add" type="Label" parent="."]
visible = false
margin_left = 700.0
margin_top = 100.0
margin_right = 740.0
margin_bottom = 141.0
custom_colors/font_color = Color( 0.937255, 0.027451, 0.027451, 1 )
custom_fonts/font = ExtResource( 7 )
text = "+1"

[node name="exit" type="Panel" parent="."]
visible = false
margin_left = 390.0
margin_top = 90.0
margin_right = 570.0
margin_bottom = 500.0

[node name="title" type="Button" parent="exit"]
margin_top = 140.0
margin_right = 180.0
margin_bottom = 240.0
custom_fonts/font = ExtResource( 7 )
text = "返回主页"
script = ExtResource( 9 )

[node name="back" type="Button" parent="."]
margin_right = 130.0
margin_bottom = 90.0
custom_fonts/font = ExtResource( 11 )
text = "back"
script = ExtResource( 12 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 4 )

[node name="rain" parent="." instance=ExtResource( 13 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0.84723, 0, 0 )
visible = false

[node name="rhea" parent="." instance=ExtResource( 2 )]

[node name="Camera" type="Camera" parent="rhea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.00128, 1.74488 )
far = 8192.0

[node name="Tween" type="Tween" parent="."]

[node name="big" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )

[node name="bgm" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )
autoplay = true

[node name="building" type="MeshInstance" parent="."]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, -1.45907, 2.43243, -0.131777 )
mesh = ExtResource( 16 )
material/0 = null
material/1 = null
material/2 = null

[node name="building2" type="MeshInstance" parent="."]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, -0.136611, 2.43243, -1.92607 )
mesh = ExtResource( 16 )
material/0 = null
material/1 = null
material/2 = null

[node name="Label2" type="Label" parent="."]
margin_left = 786.327
margin_top = 6.44276
margin_right = 1026.33
margin_bottom = 61.4428
custom_fonts/font = ExtResource( 17 )
text = "蕾雅的身高："

[node name="height" type="Label" parent="."]
margin_left = 1000.54
margin_top = 14.9955
margin_right = 1115.54
margin_bottom = 55.9955
custom_fonts/font = ExtResource( 11 )
text = "1.5m"

[connection signal="timeout" from="Timer" to="Timer" method="_on_Timer_timeout"]
[connection signal="mouse_entered" from="Panel" to="Panel" method="_on_Panel_mouse_entered"]
[connection signal="visibility_changed" from="Panel" to="Panel" method="_on_Panel_visibility_changed"]
[connection signal="pressed" from="Panel/re_start" to="Panel/re_start" method="_on_re_start_pressed"]
[connection signal="pressed" from="Panel/title2" to="Panel/title2" method="_on_title_pressed"]
[connection signal="pressed" from="exit/title" to="exit/title" method="_on_title_pressed"]
[connection signal="pressed" from="back" to="back" method="_on_back_pressed"]
